# facebook_ads_scraper

./: .gitignore  README.md  browser_state.json  finic_config.json  pyproject.toml
facebook_ads_scraper/: main.py
